third_party/move/move-compiler-v2/tests/verification/verify/function_with_spec.exp

Diagnostics:
error: unresolved spec target
   ┌─ tests/verification/verify/function_with_spec.move:15:10
   │
15 │     spec baz {
   │          ^^^
